--- a/1.0.0/selectx.css
+++ b/1.0.0/selectx.css
@@ -30,14 +30,14 @@
                     @media (max-width:760px) {.selectx-tag-remove {display:none;}}
                     .selectx-tag-title {cursor:default;vertical-align:top;display:inline-block;line-height:21px;padding:0 5px;border:1px solid rgba(0,0,0,0.25);border-left-width:0;border-radius:0 2px 2px 0;}
                     @media (max-width:760px) {.selectx-tag-title {border-radius:2px;border-left-width:1px;}}
-            .selectx-search-tags {color:#000;width:1px;max-width:100%;padding:0;height:23px;border:0;margin-bottom:5px;display:inline-block;vertical-align:top;}
+            .selectx-search-tags {color:#000;width:1px;max-width:100%;padding:0 !important;height:23px;border:0 !important;margin-bottom:5px;display:inline-block;vertical-align:top;}
         .selectx-no-value .selectx-selection {color:#999;}
         .selectx-dropdown {min-height:61px;position:absolute;top:100%;left:0;width:100%;padding-top:30px;display:none;border:1px solid transparent;border-top:0;}
         .selectx-opened .selectx-dropdown {display:block;}
         .selectx-multiple .selectx-dropdown,
         .selectx-no-search .selectx-dropdown {border-top:1px solid rgba(0,0,0,0.25);min-height:31px;padding-top:0;}
-            .selectx-search {width:100%;position:absolute;top:100%;display:block;height:0;padding:0 10px;border:1px solid transparent;border-top:0;border-bottom:0;background:transparent;}
-            .selectx-opened.selectx-has-search .selectx-search {height:30px;border:1px solid transparent;border-top:1px solid rgba(0,0,0,0.25);border-bottom:1px solid rgba(0,0,0,0.25);}
+            .selectx-search {width:100%;position:absolute;top:100%;display:block;height:0;border-radius:0 !important;padding:0 10px !important;border:1px solid transparent !important;border-top:0 !important;border-bottom:0 !important;background:transparent;}
+            .selectx-opened.selectx-has-search .selectx-search {height:30px;border-top:1px solid rgba(0,0,0,0.25) !important;border-bottom:1px solid rgba(0,0,0,0.25) !important;}
             .selectx-no-results {line-height:30px;padding:0 10px;position:absolute;color:#999;}
             .selectx-results {max-height:210px;overflow-y:auto;position:relative;background:#fff;}
                 .selectx-optgroup {}
